add qwik to astro

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@builder.io/qwik": "^1.15.0",
+    "@qwikdev/astro": "^0.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.8",
     "daisyui": "^5.0.50",
